--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>521</width>
-    <height>311</height>
+    <height>308</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>15</x>
-      <y>41</y>
+      <x>20</x>
+      <y>50</y>
       <width>281</width>
       <height>201</height>
      </rect>
@@ -31,6 +31,19 @@
       <y>10</y>
       <width>371</width>
       <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Geometry">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>57</width>
+      <height>14</height>
      </rect>
     </property>
     <property name="text">
