--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>527</width>
-    <height>562</height>
+    <height>653</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,10 +56,14 @@
       <x>20</x>
       <y>260</y>
       <width>491</width>
-      <height>241</height>
+      <height>341</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="propertiesLayout"/>
+    <layout class="QVBoxLayout" name="propertiesLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetNoConstraint</enum>
+     </property>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
